--- a/websocket-react-app/frontend/src/components/CreateRoomPopup.css
+++ b/websocket-react-app/frontend/src/components/CreateRoomPopup.css
@@ -1,19 +1,17 @@
 
-/* Popup overlay styling */
 .popup-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
   }
-  
-  /* Popup content styling */
+
   .popup-content {
     background-color: white;
     padding: 20px;
@@ -48,7 +46,7 @@
     font-family: 'DM Sans', sans-serif;
   }
   
-  /* Popup buttons styling */
+
   .popup-buttons {
     display: flex;
     justify-content: space-between;
@@ -56,7 +54,6 @@
     font-family: 'DM Sans', sans-serif;
   }
   
-  /* Generate Pass button styling */
 .generate-pass-button {
   background-color: #28a745;
   color: white;
