--- a/websocket-react-app/frontend/src/components/StreamingRoom.css
+++ b/websocket-react-app/frontend/src/components/StreamingRoom.css
@@ -276,6 +276,9 @@ body {
 }
 
 .message-button-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 2.5em;
   padding: 0.3em;
   width: 100%;
